# plume

./: .gitignore  CHANGELOG.md  CHANGELOG_EN.md  CLAUDE.md  README.md  README_CHANGELOG.md  README_CHANGELOG_EN.md  README_EN.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: PLAN.md  PRD.md  SPEC.md
mockups/: 03-vol-de-nuit.html
src/: codex.ts  context-menu.ts  editor.ts  file.ts  focus-mode.ts  i18n.ts  main.ts  menu.ts  preview.ts  renderer.ts  settings.ts  shortcuts.ts  statusbar.ts  style.css  theme.ts  toc.ts  typewriter.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: copy_builtin_theme_template.toml  delete_codex_folder.toml  get_opened_urls.toml  grant_scope.toml  import_theme_file.toml  list_codex_files.toml  load_custom_themes.toml  load_locales.toml  open_locales_dir.toml  open_themes_dir.toml  pick_codex_root.toml
src-tauri/src/: lib.rs
src/types/: katex-css.d.ts  markdown-it-front-matter.d.ts  raw-import.d.ts
tests/: codex.test.ts  export.test.ts  file.test.ts  focus.test.ts  preview.test.ts  renderer.test.ts  settings.test.ts  statusbar.test.ts  theme.test.ts
